# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  18 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Add v-e-commands (veinfo, vbegin, etc) to sbin/functions.sh that
    depend on RC_VERBOSE which defaults to no.  Add --verbose to args
    understood by runscript.sh.

    In net.lo, use veinfo and friends when loading modules since this
    information is confusing to users.

    In net.lo, always load global "modules" setting in following
    "modules_iface" since this is a little easier for users to
    understand.

    In net.lo, use eindent for output of pre/post scripts

  18 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Add shfs to our list of net filesystems #61452.  Also add afs/nfs4.

    Add a '-u' parameter to depscan.sh to allow for updates only when 
    the config files have changed.  With /sbin/rc using this, we speed 
    up bootup by only regenerating the cache when need be #67976.  Also 
    add a '-u' parameter to env-update.sh for same reasons.

    Don't run depscan.sh in rc-update anymore since the cache files don't 
    depend on runlevels (which is all that rc-update modifies).

    Add unicode support to keymaps/consolefont #32111 and UML support #29707.

    Add checks to many filesystem operations in the eventuality that the 
    filesystems are mounted read only.

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Update the default fstab /dev/shm mount to include the nodev, nosuid, 
    and noexec mount flags.  No reason for the filesystem to have those.

    Cleaned up the clock init script.  Moved the clock options out of 
    rc.conf and into its own conf.d/clock file.  Added support for the 
    weird Alpha consoles SRM/ARC since they need special config options.  
    Also made the syncing of system clock to hardware clock at shutdown 