@@ -16,7 +16,7 @@ checkconfig() {
 }
 
 start() {
-	if grep -q 'UML' /proc/cpuinfo
+	if is_uml_sys
 	then
 		ebegin "Loading key mappings"
 		eend 0
